--- a/src/partials/cards.html
+++ b/src/partials/cards.html
@@ -1,45 +1,71 @@
 <div class="container shakes-content">
-    <h5 class="shakes-content__podtitle">100% natural</h5>
-    <h2 class="shakes-content__title">products</h2>
-    <div class="cards">
-        <div class="card">
-            <picture class="card__img">
-                <source srcset="/img/strawberry-icecream.png 1x, /img/strawberry-icecream@2x.png 2x" />
-                <img src="/img/strawberry-icecream.png" alt="strawberry-icecream" />
-            </picture>
-            <div class="card-content">
-                <h2 class="card-content__title">ice cream <br><span class="card-content__upd">...</span></h2>
-                <p class="card-content__item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                <div class="svg-background">
-                    <svg class="icon icon-arrow-right"><use xlink:href="/icomoon/symbol-defs.svg#icon-arrow-right"></use></svg>
-                </div>
-            </div>
+  <h5 class="shakes-content__podtitle">100% natural</h5>
+  <h2 class="shakes-content__title">products</h2>
+  <div class="cards">
+    <div class="card">
+      <picture class="card__img">
+        <source
+          srcset="
+            /img/strawberry-icecream.png    1x,
+            /img/strawberry-icecream@2x.png 2x
+          "
+        />
+        <img src="/img/strawberry-icecream.png" alt="strawberry-icecream" />
+      </picture>
+      <div class="card-content">
+        <h2 class="card-content__title">
+          ice cream <br /><span class="card-content__upd">...</span>
+        </h2>
+        <p class="card-content__item">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+        <div class="svg-background">
+          <svg class="icon icon-arrow-right">
+            <use xlink:href="/icomoon/symbol-defs.svg#icon-arrow-right"></use>
+          </svg>
         </div>
-        <div class="card">
-            <picture class="card__img">
-                <source srcset="/img/ice-coffee.png 1x, /img/ice-coffee@2x.png 2x" />
-                <img src="/img/ice-coffee.png" alt="ice-coffee" />
-            </picture>
-            <div class="card-content">
-                <h2 class="card-content__title">ice coffee <br><span class="card-content__upd">...</span></h2>
-                <p class="card-content__item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                <div class="svg-background">
-                    <svg class="icon icon-arrow-right"><use xlink:href="/icomoon/symbol-defs.svg#icon-arrow-right"></use></svg>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <picture class="card__img">
-                <source srcset="/img/milkshakes.png 1x, /img/milkshakes@2x.png 2x" />
-                <img src="/img/milkshakes.png" alt="milkshakes" />
-            </picture>
-            <div class="card-content">
-                <h2 class="card-content__title">milkshakes <br><span class="card-content__upd">...</span></h2>
-                <p class="card-content__item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                <div class="svg-background">
-                    <svg class="icon icon-arrow-right"><use xlink:href="/icomoon/symbol-defs.svg#icon-arrow-right"></use></svg>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+    <div class="card">
+      <picture class="card__img">
+        <source srcset="/img/ice-coffee.png 1x, /img/ice-coffee@2x.png 2x" />
+        <img src="/img/ice-coffee.png" alt="ice-coffee" />
+      </picture>
+      <div class="card-content">
+        <h2 class="card-content__title">
+          ice coffee <br /><span class="card-content__upd">...</span>
+        </h2>
+        <p class="card-content__item">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+        <div class="svg-background">
+          <svg class="icon icon-arrow-right">
+            <use xlink:href="/icomoon/symbol-defs.svg#icon-arrow-right"></use>
+          </svg>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <picture class="card__img">
+        <source srcset="/img/milkshakes.png 1x, /img/milkshakes@2x.png 2x" />
+        <img src="/img/milkshakes.png" alt="milkshakes" />
+      </picture>
+      <div class="card-content">
+        <h2 class="card-content__title">
+          milkshakes <br /><span class="card-content__upd">...</span>
+        </h2>
+        <p class="card-content__item">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+        <div class="svg-background">
+          <svg class="icon icon-arrow-right">
+            <use xlink:href="/icomoon/symbol-defs.svg#icon-arrow-right"></use>
+          </svg>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
