--- a/src/partials/description.html
+++ b/src/partials/description.html
@@ -1,18 +1,23 @@
 <div class="container description-content">
-    <div class="about-milk">
-        <picture class="about-milk__img">
-            <source srcset="/img/milk.png 1x, /img/milk@2x.png 2x" />
-            <img src="/img/milk.png" alt="milk" />
-        </picture>
-        <div class="about-milk-text">
-            <p class="about-milk-text__item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-            <div class="svg-background">
-                <svg class="icon icon-arrow-right"><use xlink:href="/icomoon/symbol-defs.svg#icon-arrow-right"></use></svg>
-            </div>
-        </div>
-    </div>
-    <picture class="description-content__women">
-        <source srcset="/img/woman.png 1x, /img/woman@2x.png 2x" />
-        <img src="/img/woman.png" alt="woman" />
+  <div class="about-milk">
+    <picture class="about-milk__img">
+      <source srcset="/img/milk.png 1x, /img/milk@2x.png 2x" />
+      <img src="/img/milk.png" alt="milk" />
     </picture>
+    <div class="about-milk-text">
+      <p class="about-milk-text__item">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et
+      </p>
+      <div class="svg-background">
+        <svg class="icon icon-arrow-right">
+          <use xlink:href="/icomoon/symbol-defs.svg#icon-arrow-right"></use>
+        </svg>
+      </div>
+    </div>
+  </div>
+  <picture class="description-content__women">
+    <source srcset="/img/woman.png 1x, /img/woman@2x.png 2x" />
+    <img src="/img/woman.png" alt="woman" />
+  </picture>
 </div>
