--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,28 +1,30 @@
 <div class="container hero-content">
-    <div class="description">
-    <h1 class="description__title">ice cream made with <span class="description__title--span">passion</span></h1>
+  <div class="description">
+    <h1 class="description__title">
+      ice cream made with <span class="description__title--span">passion</span>
+    </h1>
     <div class="buttons">
-        <button class="buttons__item">Products</button>
-        <button class="buttons__item">How it’s made?</button>
+      <button class="buttons__item">Products</button>
+      <button class="buttons__item">How it’s made?</button>
     </div>
-</div>
+  </div>
 
-<div class="background-cream">
+  <div class="background-cream">
     <picture class="background-cream__item">
-        <source srcset="/img/icecream.png 1x, /img/icecream@2x.png 2x" />
-        <img src="/img/icecream.png" alt="icecream" class="cream-img" />
+      <source srcset="/img/icecream.png 1x, /img/icecream@2x.png 2x" />
+      <img src="/img/icecream.png" alt="icecream" class="cream-img" />
     </picture>
-</div>
-    <div class="numbers">
-        <div class="number">
-            <div class="background-number"></div>
-            <h2 class="number__title">16</h2>
-            <p class="number__item">cafes</p>
-        </div>
-        <div class="number">
-            <div class="background-number--two"></div>
-            <h2 class="number__title">23</h2>
-            <p class="number__item">food trucks</p>
-        </div>
+  </div>
+  <div class="numbers">
+    <div class="number">
+      <div class="background-number"></div>
+      <h2 class="number__title">16</h2>
+      <p class="number__item">cafes</p>
     </div>
+    <div class="number">
+      <div class="background-number--two"></div>
+      <h2 class="number__title">23</h2>
+      <p class="number__item">food trucks</p>
+    </div>
+  </div>
 </div>
