--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,38 +1,60 @@
 <div class="container locations-content">
-    <div class="examples">
-        <div class="example">
-            <span class="example__type">cafe</span>
-            <h5 class="example__title">Chicago</h5>
-            <p class="example__item">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-            <h3 class="example__time">Monday - Friday</h3>
-            <p class="example__clock">06:00 AM - 10:00 PM</p>
-            <h3 class="example__time">Saturday - Sunday</h3>
-            <p class="example__clock bottom">06:00 AM - 10:00 PM</p>
-            <span class="example__footer">+61(0) 383 766 284 noreply@ <br>envato.com</span>
-        </div>
-        <div class="example">
-            <span class="example__type green">FOOD TRUCK</span>
-            <h5 class="example__title">Los Angeles</h5>
-            <p class="example__item">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-            <h3 class="example__time">Monday - Friday</h3>
-            <p class="example__clock">06:00 AM - 10:00 PM</p>
-            <h3 class="example__time">Saturday - Sunday</h3>
-            <p class="example__clock bottom">06:00 AM - 10:00 PM</p>
-            <span class="example__footer">+61(0) 383 766 284 noreply@ <br>envato.com</span>
-        </div>
-        <div class="example">
-            <span class="example__type">cafe</span>
-            <h5 class="example__title">New York</h5>
-            <p class="example__item">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-            <h3 class="example__time">Monday - Friday</h3>
-            <p class="example__clock">06:00 AM - 10:00 PM</p>
-            <h3 class="example__time">Saturday - Sunday</h3>
-            <p class="example__clock bottom">06:00 AM - 10:00 PM</p>
-            <span class="example__footer">+61(0) 383 766 284 noreply@ <br>envato.com</span>
-        </div>
+  <div class="examples">
+    <div class="example">
+      <span class="example__type">cafe</span>
+      <h5 class="example__title">Chicago</h5>
+      <p class="example__item">
+        Fusce ut velit laoreet, tempus arcu molestie vulputate
+      </p>
+      <h3 class="example__time">Monday - Friday</h3>
+      <p class="example__clock">06:00 AM - 10:00 PM</p>
+      <h3 class="example__time">Saturday - Sunday</h3>
+      <p class="example__clock bottom">06:00 AM - 10:00 PM</p>
+      <span class="example__footer"
+        >+61(0) 383 766 284 noreply@ <br />envato.com</span
+      >
     </div>
-    <div class="locations-buttons">
-        <button class="locations-buttons__item">Our Locations <svg class="icon icon-arrow first-arrow"><use xlink:href="/icomoon/symbol-defs.svg#icon-arrow"></use></svg></button>
-        <button class="locations-buttons__item">Franchise <svg class="icon icon-arrow"><use xlink:href="/icomoon/symbol-defs.svg#icon-arrow"></use></svg></button>
+    <div class="example">
+      <span class="example__type green">FOOD TRUCK</span>
+      <h5 class="example__title">Los Angeles</h5>
+      <p class="example__item">
+        Fusce ut velit laoreet, tempus arcu molestie vulputate
+      </p>
+      <h3 class="example__time">Monday - Friday</h3>
+      <p class="example__clock">06:00 AM - 10:00 PM</p>
+      <h3 class="example__time">Saturday - Sunday</h3>
+      <p class="example__clock bottom">06:00 AM - 10:00 PM</p>
+      <span class="example__footer"
+        >+61(0) 383 766 284 noreply@ <br />envato.com</span
+      >
     </div>
+    <div class="example">
+      <span class="example__type">cafe</span>
+      <h5 class="example__title">New York</h5>
+      <p class="example__item">
+        Fusce ut velit laoreet, tempus arcu molestie vulputate
+      </p>
+      <h3 class="example__time">Monday - Friday</h3>
+      <p class="example__clock">06:00 AM - 10:00 PM</p>
+      <h3 class="example__time">Saturday - Sunday</h3>
+      <p class="example__clock bottom">06:00 AM - 10:00 PM</p>
+      <span class="example__footer"
+        >+61(0) 383 766 284 noreply@ <br />envato.com</span
+      >
+    </div>
+  </div>
+  <div class="locations-buttons">
+    <button class="locations-buttons__item">
+      Our Locations
+      <svg class="icon icon-arrow first-arrow">
+        <use xlink:href="/icomoon/symbol-defs.svg#icon-arrow"></use>
+      </svg>
+    </button>
+    <button class="locations-buttons__item">
+      Franchise
+      <svg class="icon icon-arrow">
+        <use xlink:href="/icomoon/symbol-defs.svg#icon-arrow"></use>
+      </svg>
+    </button>
+  </div>
 </div>
