--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,48 +1,65 @@
 <div class="container made-content">
-    <h5 class="made-content__podtitle">tradition and love</h5>
-    <h2 class="made-content__title">how it’s made?</h2>
-    <div class="how-made">
-        <picture class="card__img">
-            <source srcset="/img/cow.png 1x, /img/cow@2x.png 2x" />
-            <img src="/img/cow.png" alt="cow" />
-        </picture>
-        <div class="how-made-content">
-            <h2 class="how-made-content__title">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</h2>
-            <p class="how-made-content__item">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-
-                Aliquam erat volutpat. Aenean accumsan.</p>
-                <button class="how-made-content__button">Read more <svg class="icon icon-arrow"><use xlink:href="/icomoon/symbol-defs.svg#icon-arrow"></use></svg></button>
-        </div>
+  <h5 class="made-content__podtitle">tradition and love</h5>
+  <h2 class="made-content__title">how it’s made?</h2>
+  <div class="how-made">
+    <picture class="card__img">
+      <source srcset="/img/cow.png 1x, /img/cow@2x.png 2x" />
+      <img src="/img/cow.png" alt="cow" />
+    </picture>
+    <div class="how-made-content">
+      <h2 class="how-made-content__title">
+        Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+        cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+        justo fringilla.
+      </h2>
+      <p class="how-made-content__item">
+        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+        Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+        suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+        tincidunt. Aliquam erat volutpat. Aenean accumsan.
+      </p>
+      <button class="how-made-content__button">
+        Read more
+        <svg class="icon icon-arrow">
+          <use xlink:href="/icomoon/symbol-defs.svg#icon-arrow"></use>
+        </svg>
+      </button>
     </div>
-    <div class="milks-cards">
-        <div class="milk-card">
-            <picture class="milk-card__img">
-                <source srcset="/img/water.png 1x, /img/water@2x.png 2x" />
-                <img src="/img/water.png" alt="water" class="milk-card--picture"/>
-            </picture>
-            <h2 class="milk-card__title">721</h2>
-            <p class="milk-card__item">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        </div>
-        <div class="milk-card">
-            <picture class="milk-card__img">
-                <source srcset="/img/fructs.png 1x, /img/fructs@2x.png 2x" />
-                <img src="/img/fructs.png" alt="fructs" />
-            </picture>
-            <h2 class="milk-card__title">16kg</h2>
-            <p class="milk-card__item">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        </div>
-        <div class="milk-card">
-            <picture class="milk-card__img">
-                <source srcset="/img/love.png 1x, /img/love@2x.png 2x" />
-                <img src="/img/love.png" alt="love" />
-            </picture>
-            <h2 class="milk-card__title">84</h2>
-            <p class="milk-card__item">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        </div>
-        <picture class="pictures">
-            <source srcset="/img/pictures.png 1x, /img/pictures@2x.png 2x" />
-            <img src="/img/pictures.png" alt="pictures" />
-        </picture>
+  </div>
+  <div class="milks-cards">
+    <div class="milk-card">
+      <picture class="milk-card__img">
+        <source srcset="/img/water.png 1x, /img/water@2x.png 2x" />
+        <img src="/img/water.png" alt="water" class="milk-card--picture" />
+      </picture>
+      <h2 class="milk-card__title">721</h2>
+      <p class="milk-card__item">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
     </div>
-
+    <div class="milk-card">
+      <picture class="milk-card__img">
+        <source srcset="/img/fructs.png 1x, /img/fructs@2x.png 2x" />
+        <img src="/img/fructs.png" alt="fructs" />
+      </picture>
+      <h2 class="milk-card__title">16kg</h2>
+      <p class="milk-card__item">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </div>
+    <div class="milk-card">
+      <picture class="milk-card__img">
+        <source srcset="/img/love.png 1x, /img/love@2x.png 2x" />
+        <img src="/img/love.png" alt="love" />
+      </picture>
+      <h2 class="milk-card__title">84</h2>
+      <p class="milk-card__item">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </div>
+    <picture class="pictures">
+      <source srcset="/img/pictures.png 1x, /img/pictures@2x.png 2x" />
+      <img src="/img/pictures.png" alt="pictures" />
+    </picture>
+  </div>
 </div>
