--- a/src/partials/rewievs.html
+++ b/src/partials/rewievs.html
@@ -1,122 +1,169 @@
 <div class="container rewiews-content">
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="box-carousel-content">
-            <picture class="rewiews-content__img">
-                <source srcset="/img/rewiever.png 1x, /img/rewiever@2x.png 2x" />
-                <img src="/img/rewiever.png" alt="rewiever" />
-            </picture>
-            <div class="rewiever-box">
-                <picture class="rewiever-box__img">
-                    <source srcset="/img/symbol.png 1x, /img/symbol@2x.png 2x" />
-                    <img src="/img/symbol.png" alt="symbol-one" />
-                    </picture>
-                    <div class="desktop-version">
-                        <p class="rewiever-box__item">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit</p>
-                        <p class="rewiever-box__item">nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
-                    </div>
-                    <div class="table-version">
-                        <p class="rewiever-box__item">Nullam viverra consectetuer. Quisque cursus et, porttitor risus.</p>
-                        <p class="rewiever-box__item">Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. </p>
-                        <p class="rewiever-box__item">Lorem ipsum primis in nibh vel risus.</p>
-                    </div>
-                        <div class="mobile-version">
-                          <p class="rewiever-box__item">Nullam viverra</p>
-                          <p class="rewiever-box__item">consectetuer. Quisque</p>
-                          <p class="rewiever-box__item">cursus et, porttitor risus.</p>
-                          <p class="rewiever-box__item">Aliquam sem. In hendrerit</p>
-                          <p class="rewiever-box__item">nulla quam nunc,</p>
-                          <p class="rewiever-box__item">accumsan congue. Lorem</p>
-                          <p class="rewiever-box__item">ipsum primis in nibh vel</p>
-                          <p class="rewiever-box__item">risus.</p>
-                        </div>
-            </div>  
-          </div>
-          </div>
-          <div class="carousel-item">
-            <div class="box-carousel-content">
-            <picture class="rewiews-content__img">
-                <source srcset="/img/black-man.png 1x, /img/black-man@2x.png 2x" />
-                <img src="/img/black-man.png" alt="black-man" />
-            </picture>
-            <div class="rewiever-box">
-                <picture class="rewiever-box__img">
-                    <source srcset="/img/symbol.png 1x, /img/symbol@2x.png 2x" />
-                    <img src="/img/symbol.png" alt="symbol" />
-                    </picture>
-                    <div class="desktop-version">
-                        <p class="rewiever-box__item">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit</p>
-                        <p class="rewiever-box__item">nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
-                    </div>
-                    <div class="table-version">
-                      <p class="rewiever-box__item">Nullam viverra consectetuer. Quisque cursus et, porttitor risus.</p>
-                      <p class="rewiever-box__item">Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. </p>
-                      <p class="rewiever-box__item">Lorem ipsum primis in nibh vel risus.</p>
-                    </div>
-                    <div class="mobile-version">
-                      <p class="rewiever-box__item">Nullam viverra</p>
-                      <p class="rewiever-box__item">consectetuer. Quisque</p>
-                      <p class="rewiever-box__item">cursus et, porttitor risus.</p>
-                      <p class="rewiever-box__item">Aliquam sem. In hendrerit</p>
-                      <p class="rewiever-box__item">nulla quam nunc,</p>
-                      <p class="rewiever-box__item">accumsan congue. Lorem</p>
-                      <p class="rewiever-box__item">ipsum primis in nibh vel</p>
-                      <p class="rewiever-box__item">risus.</p>
-                    </div>
-            </div>  
-          </div>
-          </div>
-          <div class="carousel-item">
-            <div class="box-carousel-content">
-            <picture class="rewiews-content__img">
-                <source srcset="/img/white-woman.png 1x, /img/white-woman@2x.png 2x" />
-                <img src="/img/white-woman.png" alt="white-woman" />
-            </picture>
-            <div class="rewiever-box">
-                <picture class="rewiever-box__img">
-                    <source srcset="/img/symbol.png 1x, /img/symbol@2x.png 2x" />
-                    <img src="/img/symbol.png" alt="symbol-two" />
-                    </picture>
-                    <div class="desktop-version">
-                        <p class="rewiever-box__item">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit</p>
-                        <p class="rewiever-box__item">nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
-                    </div>
-                    <div class="table-version">
-                      <p class="rewiever-box__item">Nullam viverra consectetuer. Quisque cursus et, porttitor risus.</p>
-                      <p class="rewiever-box__item">Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. </p>
-                      <p class="rewiever-box__item">Lorem ipsum primis in nibh vel risus.</p>
-                    </div>
-                    <div class="mobile-version">
-                      <p class="rewiever-box__item">Nullam viverra</p>
-                      <p class="rewiever-box__item">consectetuer. Quisque</p>
-                      <p class="rewiever-box__item">cursus et, porttitor risus.</p>
-                      <p class="rewiever-box__item">Aliquam sem. In hendrerit</p>
-                      <p class="rewiever-box__item">nulla quam nunc,</p>
-                      <p class="rewiever-box__item">accumsan congue. Lorem</p>
-                      <p class="rewiever-box__item">ipsum primis in nibh vel</p>
-                      <p class="rewiever-box__item">risus.</p>
-                    </div>
-            </div>  
-          </div>
+  <div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="box-carousel-content">
+          <picture class="rewiews-content__img">
+            <source srcset="/img/rewiever.png 1x, /img/rewiever@2x.png 2x" />
+            <img src="/img/rewiever.png" alt="rewiever" />
+          </picture>
+          <div class="rewiever-box">
+            <img
+              src="/img/symbol.png"
+              alt="symbol-one"
+              class="rewiever-box__img"
+            />
+            <div class="desktop-version">
+              <p class="rewiever-box__item">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                Aliquam sem. In hendrerit
+              </p>
+              <p class="rewiever-box__item">
+                nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel
+                risus.
+              </p>
+            </div>
+            <div class="table-version">
+              <p class="rewiever-box__item">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              </p>
+              <p class="rewiever-box__item">
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
+              </p>
+              <p class="rewiever-box__item">
+                Lorem ipsum primis in nibh vel risus.
+              </p>
+            </div>
+            <div class="mobile-version">
+              <p class="rewiever-box__item">Nullam viverra</p>
+              <p class="rewiever-box__item">consectetuer. Quisque</p>
+              <p class="rewiever-box__item">cursus et, porttitor risus.</p>
+              <p class="rewiever-box__item">Aliquam sem. In hendrerit</p>
+              <p class="rewiever-box__item">nulla quam nunc,</p>
+              <p class="rewiever-box__item">accumsan congue. Lorem</p>
+              <p class="rewiever-box__item">ipsum primis in nibh vel</p>
+              <p class="rewiever-box__item">risus.</p>
+            </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-    <picture>
-        <source srcset="/img/elipses.png 1x, /img/elipses@2x.png 2x" />
-        <img src="/img/elipses.png" alt="elipses" />
-    </picture>
-    <h5 class="rewiews-content__title">Emily, Los Angeles</h5>
-    <picture>
-        <source srcset="/img/hr-dots.png 1x, /img/hr-dots@2x.png 2x" />
-        <img src="/img/hr-dots.png" alt="hr-dots" />
-    </picture>
+      <div class="carousel-item">
+        <div class="box-carousel-content">
+          <picture class="rewiews-content__img">
+            <source srcset="/img/black-man.png 1x, /img/black-man@2x.png 2x" />
+            <img src="/img/black-man.png" alt="black-man" />
+          </picture>
+          <div class="rewiever-box">
+            <img src="/img/symbol.png" alt="symbol" class="rewiever-box__img" />
+            <div class="desktop-version">
+              <p class="rewiever-box__item">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                Aliquam sem. In hendrerit
+              </p>
+              <p class="rewiever-box__item">
+                nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel
+                risus.
+              </p>
+            </div>
+            <div class="table-version">
+              <p class="rewiever-box__item">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              </p>
+              <p class="rewiever-box__item">
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
+              </p>
+              <p class="rewiever-box__item">
+                Lorem ipsum primis in nibh vel risus.
+              </p>
+            </div>
+            <div class="mobile-version">
+              <p class="rewiever-box__item">Nullam viverra</p>
+              <p class="rewiever-box__item">consectetuer. Quisque</p>
+              <p class="rewiever-box__item">cursus et, porttitor risus.</p>
+              <p class="rewiever-box__item">Aliquam sem. In hendrerit</p>
+              <p class="rewiever-box__item">nulla quam nunc,</p>
+              <p class="rewiever-box__item">accumsan congue. Lorem</p>
+              <p class="rewiever-box__item">ipsum primis in nibh vel</p>
+              <p class="rewiever-box__item">risus.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="box-carousel-content">
+          <picture class="rewiews-content__img">
+            <source
+              srcset="/img/white-woman.png 1x, /img/white-woman@2x.png 2x"
+            />
+            <img src="/img/white-woman.png" alt="white-woman" />
+          </picture>
+          <div class="rewiever-box">
+            <img
+              src="/img/symbol.png"
+              alt="symbol-two"
+              class="rewiever-box__img"
+            />
+            <div class="desktop-version">
+              <p class="rewiever-box__item">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                Aliquam sem. In hendrerit
+              </p>
+              <p class="rewiever-box__item">
+                nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel
+                risus.
+              </p>
+            </div>
+            <div class="table-version">
+              <p class="rewiever-box__item">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              </p>
+              <p class="rewiever-box__item">
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
+              </p>
+              <p class="rewiever-box__item">
+                Lorem ipsum primis in nibh vel risus.
+              </p>
+            </div>
+            <div class="mobile-version">
+              <p class="rewiever-box__item">Nullam viverra</p>
+              <p class="rewiever-box__item">consectetuer. Quisque</p>
+              <p class="rewiever-box__item">cursus et, porttitor risus.</p>
+              <p class="rewiever-box__item">Aliquam sem. In hendrerit</p>
+              <p class="rewiever-box__item">nulla quam nunc,</p>
+              <p class="rewiever-box__item">accumsan congue. Lorem</p>
+              <p class="rewiever-box__item">ipsum primis in nibh vel</p>
+              <p class="rewiever-box__item">risus.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carouselExample"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carouselExample"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <picture>
+    <source srcset="/img/elipses.png 1x, /img/elipses@2x.png 2x" />
+    <img src="/img/elipses.png" alt="elipses" />
+  </picture>
+  <h5 class="rewiews-content__title">Emily, Los Angeles</h5>
+  <picture>
+    <source srcset="/img/hr-dots.png 1x, /img/hr-dots@2x.png 2x" />
+    <img src="/img/hr-dots.png" alt="hr-dots" />
+  </picture>
 </div>
