--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,24 +1,37 @@
 <div class="container footer-content">
-    <div class="footer-main">
-        <div class="footer-title">
-            <h5 class="footer-title__podtitle">homemade ice cream made</h5>
-            <h2 class="footer-title__title">with passion</h2>
-        </div>
-        <div class="footer-help">
-            <div class="socials">
-                <div class="soc">
-                    <svg class="icon icon-github"><use xlink:href="/icomoon/symbol-defs.svg#icon-github"></use></svg>
-                </div>
-                <div class="soc">
-                    <svg class="icon icon-telegram"><use xlink:href="/icomoon/symbol-defs.svg#icon-telegram"></use></svg>
-                </div>
-                <div class="soc">
-                    <svg class="icon icon-facebook"><use xlink:href="/icomoon/symbol-defs.svg#icon-facebook"></use></svg>
-                </div>
-            </div>
-            <h2 class="footer-help__title">Feel free to contact <a href="tel:+610383766284" class="footer-help__title--link">+61 (0) 383 766 284</a></h2>
-        </div>
+  <div class="footer-main">
+    <div class="footer-title">
+      <h5 class="footer-title__podtitle">homemade ice cream made</h5>
+      <h2 class="footer-title__title">with passion</h2>
     </div>
+    <div class="footer-help">
+      <div class="socials">
+        <div class="soc">
+          <svg class="icon icon-github">
+            <use xlink:href="/icomoon/symbol-defs.svg#icon-github"></use>
+          </svg>
+        </div>
+        <div class="soc">
+          <svg class="icon icon-telegram">
+            <use xlink:href="/icomoon/symbol-defs.svg#icon-telegram"></use>
+          </svg>
+        </div>
+        <div class="soc">
+          <svg class="icon icon-facebook">
+            <use xlink:href="/icomoon/symbol-defs.svg#icon-facebook"></use>
+          </svg>
+        </div>
+      </div>
+      <h2 class="footer-help__title">
+        Feel free to contact
+        <a href="tel:+610383766284" class="footer-help__title--link"
+          >+61 (0) 383 766 284</a
+        >
+      </h2>
+    </div>
+  </div>
 </div>
 <p class="footer-content__item">© 2019 - IceCream. All Rights Reserved.</p>
-<p class="footer-content__item--mobile">© 2019 - IceCream. <br>All Rights Reserved.</p>
+<p class="footer-content__item--mobile">
+  © 2019 - IceCream. <br />All Rights Reserved.
+</p>
