--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,85 +1,84 @@
 header {
-    padding-top: 50px;
-    padding-bottom: 45px;
-    background-color: #FFB8CA;
-    @media (max-width: 1200px) {
-        & {
-            padding-top: 40px;
-            padding-bottom: 30px;
-        }
+  padding-top: 50px;
+  padding-bottom: 45px;
+  background-color: #ffb8ca;
+  @media (max-width: 1200px) {
+    & {
+      padding-top: 40px;
+      padding-bottom: 30px;
     }
-    @media (max-width: 768px) {
-        & {
-            padding-top: 5px;
-            padding-bottom: 0px;
-        }
+  }
+  @media (max-width: 768px) {
+    & {
+      padding-top: 5px;
+      padding-bottom: 0px;
     }
-    .header-content {
+  }
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .nav-bar {
+      display: flex;
+      gap: 35px;
+      z-index: 2;
+      align-items: center;
+      @media (max-width: 1200px) {
+        & {
+          display: none;
+        }
+      }
+      &__item {
+        color: rgb(255, 255, 255);
+        font-family: 'DM Sans';
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 21px;
+        transition: color 0.3s ease;
+        &:hover {
+          color: rgb(212, 20, 67);
+        }
+      }
+    }
+    .svg-button {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+      z-index: 2;
+      .icon-burger {
+        display: none;
+        @media (max-width: 1200px) {
+          display: block;
+        }
+      }
+      &__button {
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        .nav-bar {
-            display: flex;
-            gap: 35px;
-            z-index: 2;
-            align-items: center;
-            @media (max-width: 1200px) {
-                & {
-                    display: none;
-                }
-            }
-            &__item {
-                color: rgb(255, 255, 255);
-                font-family: 'DM Sans';
-                font-size: 16px;
-                font-weight: 700;
-                line-height: 21px;
-                transition: color 0.3s ease;
-                &:hover {
-                    color: rgb(212, 20, 67);
-                }
-            }
+        gap: 10px;
+        color: rgb(212, 20, 67);
+        font-family: 'DM Sans';
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 21px;
+        padding: 10px 40px;
+        border-radius: 22px;
+        background: rgb(255, 255, 255);
+        border: none;
+        @media (max-width: 1200px) {
+          & {
+            color: rgb(212, 20, 67);
+            font-family: 'DM Sans';
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 21px;
+          }
         }
-        .svg-button {
-            display: flex;
-            align-items: center;
-            gap: 30px;
-            z-index: 2;
-            .icon-burger {
-                display: none;
-                @media (max-width: 1200px) {
-                    display: block;
-                }
-            }
-            &__button {
-                display: flex;
-                align-items: center;
-                gap: 10px;
-                color: rgb(212, 20, 67);
-                font-family: 'DM Sans';
-                font-size: 16px;
-                font-weight: 700;
-                line-height: 21px;
-                padding: 10px 40px;
-                border-radius: 22px;
-                background: rgb(255, 255, 255);
-                border: none;
-                @media (max-width: 1200px) {
-                    & {
-                        color: rgb(212, 20, 67);
-                        font-family: 'DM Sans';
-                        font-size: 16px;
-                        font-weight: 700;
-                        line-height: 21px;
-                    }
-                }
-                @media (max-width: 768px) {
-                    & {
-                        display: none;
-                    }
-                }
-            }
+        @media (max-width: 768px) {
+          & {
+            display: none;
+          }
         }
-        
+      }
     }
+  }
 }
