--- a/src/sass/components/main/_hero.scss
+++ b/src/sass/components/main/_hero.scss
@@ -1,248 +1,249 @@
 .hero {
-    .hero-content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-top: 145px;
-        position: relative;
+  .hero-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 145px;
+    position: relative;
+    @media (max-width: 1200px) {
+      & {
+        padding-top: 15px;
+      }
+    }
+    @media (max-width: 768px) {
+      & {
+        padding-top: 30px;
+        padding-bottom: 160px;
+        overflow-x: hidden;
+        overflow-y: hidden;
+      }
+    }
+    .description {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 25px;
+      @media (max-width: 1200px) {
+        & {
+          gap: 20px;
+          z-index: 1;
+        }
+      }
+      &__title {
+        color: white;
+        font-family: 'Titan One';
+        font-weight: 400;
+        font-size: 38px;
+        text-transform: uppercase;
+        z-index: 2;
+        width: 277px;
         @media (max-width: 1200px) {
-            & {
-                padding-top: 15px;
-            }
+          & {
+            font-size: 22px;
+            width: 162px;
+          }
         }
         @media (max-width: 768px) {
+          & {
+            font-size: 26px;
+            width: 218px;
+          }
+        }
+        &--span {
+          color: rgb(212, 20, 67);
+          font-family: 'Titan One';
+          font-weight: 400;
+          font-size: 58px;
+          text-transform: uppercase;
+          @media (max-width: 1200px) {
+            font-size: 34px;
+          }
+          @media (max-width: 768px) {
+            font-size: 48px;
+          }
+        }
+      }
+      .buttons {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        z-index: 2;
+        &__item {
+          color: rgb(255, 255, 255);
+          font-family: 'DM Sans';
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 18px;
+          padding: 10px 20px;
+          border: none;
+          border-radius: 20px;
+          background-color: rgb(212, 20, 67);
+          transition:
+            color 0.3s ease,
+            background-color 0.3s ease;
+          @media (max-width: 1200px) {
             & {
-                padding-top: 30px;
-                padding-bottom: 160px;
-                overflow-x: hidden;
-                overflow-y: hidden;
+              color: rgb(255, 255, 255);
+              font-family: 'DM Sans';
+              font-size: 8px;
+              font-weight: 400;
+              line-height: 10px;
             }
+          }
+          &:hover {
+            color: rgb(212, 20, 67);
+            background-color: white;
+          }
         }
-        .description {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            gap: 25px;
-            @media (max-width: 1200px) {
-                & {
-                    gap: 20px;
-                    z-index: 1;
-                }
-            }
-            &__title {
-                color: white;
-                font-family: 'Titan One';
-                font-weight: 400;
-                font-size: 38px;
-                text-transform: uppercase;
-                z-index: 2;
-                width: 277px;
-                @media (max-width: 1200px) {
-                    & {
-                        font-size: 22px;
-                        width: 162px;
-                    }
-                }
-                @media (max-width: 768px) {
-                    & {
-                        font-size: 26px;
-                        width: 218px;
-                    }
-                }
-                &--span {
-                    color: rgb(212, 20, 67);
-                    font-family: 'Titan One';
-                    font-weight: 400;
-                    font-size: 58px;
-                    text-transform: uppercase;
-                    @media (max-width: 1200px) {
-                        font-size: 34px;
-                    }
-                    @media (max-width: 768px) {
-                        font-size: 48px;
-                        
-                    }
-                }
-            }
-            .buttons {
-                display: flex;
-                align-items: center;
-                gap: 20px;
-                z-index: 2;
-                &__item {
-                    color: rgb(255, 255, 255);
-                    font-family: 'DM Sans';
-                    font-size: 14px;
-                    font-weight: 400;
-                    line-height: 18px;
-                    padding: 10px 20px;
-                    border: none;
-                    border-radius: 20px;
-                    background-color: rgb(212, 20, 67);
-                    transition: color 0.3s ease, background-color 0.3s ease;
-                    @media (max-width: 1200px) {
-                        & {
-                            color: rgb(255, 255, 255);
-                            font-family: 'DM Sans';
-                            font-size: 8px;
-                            font-weight: 400;
-                            line-height: 10px;
-                        }
-                    }
-                    &:hover {
-                        color: rgb(212, 20, 67);
-                        background-color: white;
-                    }
-                }
-            }
-        }
-        .background-cream {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: absolute;
-            left: 395px;
-            top: -30px;
-            background: rgb(255, 165, 186);
-            width: 670px;
-            height: 670px;
-            border-radius: 50%;
-            @media (max-width: 1200px) {
-                & {
-                    width: 375px;
-                    height: 375px;
-                    left: 307px;
-                    top: 0;
-                    z-index: 0;
-                }
-            }
-            @media (max-width: 768px) {
-                & {
-                    left: 35px;
-                    width: 320px;
-                    height: 344px;
-                    right: 0;
-                    top: 10px;
-                    z-index: 0;
-                }
-                @media (max-width: 480px) {
-                    width: auto;
-                }
-            }
-            &__item {
-                @media (max-width: 768px) {
-                    & {
-                        width: 171px;
-                        height: 410px;
-                        margin-top: auto;
-                    }
-                }
-                .cream-img {
-                    width: 306px;
-                    height: 705px;
-                    margin-top: 115px;
-                    @media (max-width: 1200px) {
-                        & {
-                            width: 175px;
-                            height: 410px;
-                            margin-top: 55px;
-                        }
-                    }
-                    @media (max-width: 768px) {
-                        & {
-                            width: 171px;
-                            height: 410px;
-                            margin-top: auto;
-                        }
-                    }
-                }
-            }
-        }
-        .numbers {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 40px;
-            @media (max-width: 768px) {
-                & {
-                    display: none;
-                }
-            }
-            .number {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 5px;
-                position: relative;
-                &__title {
-                    color: rgb(212, 20, 67);
-                    font-family: 'Titan One';
-                    font-size: 46px;
-                    font-weight: 400;
-                    line-height: 53px;
-                    text-transform: uppercase;
-                    z-index: 2;
-                    @media (max-width: 1200px) {
-                        & {
-                            color: rgb(212, 20, 67);
-                            font-family: 'Titan One';
-                            font-size: 28px;
-                            font-weight: 400;
-                            line-height: 32px;
-                            text-transform: uppercase;
-                            z-index: 1;
-                        }
-                    }
-                }
-                &__item {
-                    color: rgb(255, 255, 255);
-                    font-family: 'DM Sans';
-                    font-size: 14px;
-                    font-weight: 400;
-                    line-height: 18px;
-                    @media (max-width: 1200px) {
-                        & {
-                            color: rgb(255, 255, 255);
-                            font-family: 'DM Sans';
-                            font-size: 8px;
-                            font-weight: 400;
-                            line-height: 10px;
-                        }
-                    }
-                }
-                .background-number {
-                    background-color: white;
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 50%;
-                    position: absolute;
-                    left: 35px;
-                    z-index: 1;
-                    @media (max-width: 1200px) {
-                        & {
-                            left: 25px;
-                            width: 16px;
-                            height: 16px;
-                        }
-                    }
-                }
-                .background-number--two {
-                    left: 45px; 
-                    background-color: white;
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 50%;
-                    position: absolute;
-                    z-index: 1;
-                    @media (max-width: 1200px) {
-                        & {
-                            left: 30px;
-                            width: 16px;
-                            height: 16px;
-                        }
-                    }
-                }
-            }
-        }
+      }
     }
+    .background-cream {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      left: 395px;
+      top: -30px;
+      background: rgb(255, 165, 186);
+      width: 670px;
+      height: 670px;
+      border-radius: 50%;
+      @media (max-width: 1200px) {
+        & {
+          width: 375px;
+          height: 375px;
+          left: 307px;
+          top: 0;
+          z-index: 0;
+        }
+      }
+      @media (max-width: 768px) {
+        & {
+          left: 35px;
+          width: 320px;
+          height: 344px;
+          right: 0;
+          top: 10px;
+          z-index: 0;
+        }
+        @media (max-width: 480px) {
+          width: auto;
+        }
+      }
+      &__item {
+        @media (max-width: 768px) {
+          & {
+            width: 171px;
+            height: 410px;
+            margin-top: auto;
+          }
+        }
+        .cream-img {
+          width: 306px;
+          height: 705px;
+          margin-top: 115px;
+          @media (max-width: 1200px) {
+            & {
+              width: 175px;
+              height: 410px;
+              margin-top: 55px;
+            }
+          }
+          @media (max-width: 768px) {
+            & {
+              width: 171px;
+              height: 410px;
+              margin-top: auto;
+            }
+          }
+        }
+      }
+    }
+    .numbers {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 40px;
+      @media (max-width: 768px) {
+        & {
+          display: none;
+        }
+      }
+      .number {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+        position: relative;
+        &__title {
+          color: rgb(212, 20, 67);
+          font-family: 'Titan One';
+          font-size: 46px;
+          font-weight: 400;
+          line-height: 53px;
+          text-transform: uppercase;
+          z-index: 2;
+          @media (max-width: 1200px) {
+            & {
+              color: rgb(212, 20, 67);
+              font-family: 'Titan One';
+              font-size: 28px;
+              font-weight: 400;
+              line-height: 32px;
+              text-transform: uppercase;
+              z-index: 1;
+            }
+          }
+        }
+        &__item {
+          color: rgb(255, 255, 255);
+          font-family: 'DM Sans';
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 18px;
+          @media (max-width: 1200px) {
+            & {
+              color: rgb(255, 255, 255);
+              font-family: 'DM Sans';
+              font-size: 8px;
+              font-weight: 400;
+              line-height: 10px;
+            }
+          }
+        }
+        .background-number {
+          background-color: white;
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          position: absolute;
+          left: 35px;
+          z-index: 1;
+          @media (max-width: 1200px) {
+            & {
+              left: 25px;
+              width: 16px;
+              height: 16px;
+            }
+          }
+        }
+        .background-number--two {
+          left: 45px;
+          background-color: white;
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          position: absolute;
+          z-index: 1;
+          @media (max-width: 1200px) {
+            & {
+              left: 30px;
+              width: 16px;
+              height: 16px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
