--- a/src/sass/components/main/_made.scss
+++ b/src/sass/components/main/_made.scss
@@ -1,339 +1,345 @@
 .made {
-    background: url("../img/milkground.png") no-repeat center / contain, rgb(255, 245, 246);
-    padding-top: 125px;
-    padding-bottom: 310px;
-    @media (min-device-pixel-ratio: 2),
+  background:
+    url('../img/milkground.png') no-repeat center / contain,
+    rgb(255, 245, 246);
+  padding-top: 125px;
+  padding-bottom: 310px;
+  @media (min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     & {
-        background: url("../img/milkground@2x.png") no-repeat center / contain, rgb(255, 245, 246);
+      background:
+        url('../img/milkground@2x.png') no-repeat center / contain,
+        rgb(255, 245, 246);
     }
     @media (max-width: 1200px) {
-        & {
-            padding-top: 130px;
-            padding-bottom: 250px;
-            background: rgb(255, 245, 246);
-        }
+      & {
+        padding-top: 130px;
+        padding-bottom: 250px;
+        background: rgb(255, 245, 246);
+      }
     }
     @media (max-width: 768px) {
-        & {
-            padding-top: 125px;
-            padding-bottom: 145px;
-            background: url("../img/milkground.png") no-repeat center / contain, rgb(255, 245, 246);
-        }
+      & {
+        padding-top: 125px;
+        padding-bottom: 145px;
+        background:
+          url('../img/milkground.png') no-repeat center / contain,
+          rgb(255, 245, 246);
+      }
     }
   }
-    .made-content {
+  .made-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    .pictures {
+      position: absolute;
+      top: 115.8%;
+      z-index: 2;
+      width: 1280px;
+      @media (max-width: 1200px) {
+        & {
+          top: 115.7%;
+          width: 100%;
+          z-index: 1;
+        }
+      }
+      @media (max-width: 992px) {
+        & {
+          top: 116.5%;
+          width: 100%;
+        }
+      }
+      @media (max-width: 768px) {
+        & {
+          top: 105.1%;
+          width: 100%;
+        }
+      }
+      @media (max-width: 480px) {
+        & {
+          top: 106.6%;
+          width: auto;
+        }
+      }
+    }
+    &__podtitle {
+      color: rgb(255, 165, 186);
+      font-family: 'Titan One';
+      font-size: 30px;
+      font-weight: 400;
+      line-height: 34px;
+      text-transform: uppercase;
+      @media (max-width: 1200px) {
+        color: rgb(255, 165, 186);
+        font-family: 'Titan One';
+        font-size: 26px;
+        font-weight: 400;
+        line-height: 30px;
+      }
+      @media (max-width: 768px) {
+        & {
+          color: rgb(255, 165, 186);
+          font-family: 'Titan One';
+          font-size: 18px;
+          font-weight: 400;
+          text-transform: uppercase;
+        }
+      }
+    }
+    &__title {
+      color: rgb(212, 20, 67);
+      font-family: 'Titan One';
+      font-size: 58px;
+      font-weight: 400;
+      line-height: 66px;
+      text-transform: uppercase;
+      @media (max-width: 1200px) {
+        & {
+          color: rgb(212, 20, 67);
+          font-family: 'Titan One';
+          font-size: 48px;
+          font-weight: 400;
+          line-height: 55px;
+        }
+      }
+      @media (max-width: 768px) {
+        & {
+          color: rgb(212, 20, 67);
+          font-family: 'Titan One';
+          font-size: 34px;
+          font-weight: 400;
+          text-align: center;
+          text-transform: uppercase;
+          width: 200px;
+          line-height: 40px;
+        }
+      }
+    }
+    .how-made {
+      display: flex;
+      align-items: center;
+      gap: 75px;
+      @media (max-width: 1200px) {
+        & {
+          gap: 15px;
+          padding-top: 150px;
+        }
+      }
+      @media (max-width: 768px) {
+        & {
+          flex-wrap: wrap;
+          gap: 45px;
+          padding-top: 25px;
+        }
+      }
+      .card__img {
+        @media (max-width: 1200px) {
+          & {
+            width: 340px;
+            height: 340px;
+          }
+        }
+        @media (max-width: 768px) {
+          & {
+            width: 280px;
+            height: 279px;
+          }
+        }
+      }
+      .how-made-content {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        position: relative;
-        .pictures {
-            position: absolute;
-            top: 115.8%;
-            z-index: 2;
-            width: 1280px;
-            @media (max-width: 1200px) {
-                & {
-                    top: 115.7%;
-                    width: 100%;
-                    z-index: 1;
-                }
-            }
-            @media (max-width: 992px) {
-                & {
-                    top: 116.5%;
-                    width: 100%;
-                }
-            }
-            @media (max-width: 768px) {
-                & {
-                    top: 105.1%;
-                    width: 100%;
-                }
-            }
-            @media (max-width: 480px) {
-                & {
-                    top: 106.6%;
-                    width: auto;
-                }
-            }
+        align-items: flex-start;
+        gap: 35px;
+        @media (max-width: 1200px) {
+          & {
+            gap: 45px;
+          }
         }
-        &__podtitle {
-            color: rgb(255, 165, 186);
-            font-family: 'Titan One';
-            font-size: 30px;
-            font-weight: 400;
-            line-height: 34px;
-            text-transform: uppercase;
-            @media (max-width: 1200px) {
-                color: rgb(255, 165, 186);
-                font-family: 'Titan One';
-                font-size: 26px;
-                font-weight: 400;
-                line-height: 30px;
-            }
-            @media (max-width: 768px) {
-                & {
-                    color: rgb(255, 165, 186);
-                    font-family: 'Titan One';
-                    font-size: 18px;
-                    font-weight: 400;
-                    text-transform: uppercase;
-                }
-            }
+        @media (max-width: 768px) {
+          & {
+            align-items: center;
+          }
         }
         &__title {
-            color: rgb(212, 20, 67);
-            font-family: 'Titan One';
-            font-size: 58px;
-            font-weight: 400;
-            line-height: 66px;
-            text-transform: uppercase;
-            @media (max-width: 1200px) {
-                & {
-                    color: rgb(212, 20, 67);
-                    font-family: 'Titan One';
-                    font-size: 48px;
-                    font-weight: 400;
-                    line-height: 55px;
-                }
+          color: rgb(0, 0, 0);
+          font-family: 'DM Sans';
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 176%;
+          width: 463px;
+          @media (max-width: 1200px) {
+            & {
+              color: rgb(0, 0, 0);
+              font-family: 'DM Sans';
+              font-size: 14px;
+              font-weight: 500;
+              width: 340px;
             }
-            @media (max-width: 768px) {
-                & {
-                    color: rgb(212, 20, 67);
-                    font-family: 'Titan One';
-                    font-size: 34px;
-                    font-weight: 400;
-                    text-align: center;
-                    text-transform: uppercase;
-                    width: 200px;
-                    line-height: 40px;
-                }
+          }
+          @media (max-width: 768px) {
+            & {
+              color: rgb(0, 0, 0);
+              font-family: 'DM Sans';
+              font-size: 12px;
+              font-weight: 500;
+              width: 220px;
             }
+          }
         }
-        .how-made {
-            display: flex;
-            align-items: center;
-            gap: 75px;
-            @media (max-width: 1200px) {
-                & {
-                    gap: 15px;
-                    padding-top: 150px;
-                }
+        &__item {
+          color: rgb(144, 126, 130);
+          font-family: 'DM Sans';
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 194%;
+          width: 463px;
+          @media (max-width: 1200px) {
+            & {
+              color: rgb(144, 126, 130);
+              font-family: 'DM Sans';
+              font-size: 14px;
+              font-weight: 500;
+              width: 340px;
             }
-            @media (max-width: 768px) {
-                & {
-                    flex-wrap: wrap;
-                    gap: 45px;
-                    padding-top: 25px;
-                }
+          }
+          @media (max-width: 768px) {
+            & {
+              color: rgb(144, 126, 130);
+              font-family: 'DM Sans';
+              font-size: 12px;
+              font-weight: 500;
+              width: 220px;
             }
-            .card__img {
-                @media (max-width: 1200px) {
-                    & {
-                        width: 340px;
-                        height: 340px;
-                    }
-                }
-                @media (max-width: 768px) {
-                    & {
-                        width: 280px;
-                        height: 279px;
-                    }
-                }
-            }
-            .how-made-content {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 35px;
-                @media (max-width: 1200px) {
-                    & {
-                        gap: 45px;
-                    }
-                }
-                @media (max-width: 768px) {
-                    & {
-                        align-items: center;
-                    }
-                }
-                &__title {
-                    color: rgb(0, 0, 0);
-                    font-family: 'DM Sans';
-                    font-size: 16px;
-                    font-weight: 500;
-                    line-height: 176%;
-                    width: 463px;
-                    @media (max-width: 1200px) {
-                        & {
-                            color: rgb(0, 0, 0);
-                            font-family: 'DM Sans';
-                            font-size: 14px;
-                            font-weight: 500;
-                            width: 340px;
-                        }
-                    }
-                    @media (max-width: 768px) {
-                        & {
-                            color: rgb(0, 0, 0);
-                            font-family: 'DM Sans';
-                            font-size: 12px;
-                            font-weight: 500;
-                            width: 220px;
-                        }
-                    }
-                }
-                &__item {
-                    color: rgb(144, 126, 130);
-                    font-family: 'DM Sans';
-                    font-size: 14px;
-                    font-weight: 500;
-                    line-height: 194%;
-                    width: 463px;
-                    @media (max-width: 1200px) {
-                        & {
-                            color: rgb(144, 126, 130);
-                            font-family: 'DM Sans';
-                            font-size: 14px;
-                            font-weight: 500;
-                            width: 340px;
-                        }
-                    }
-                    @media (max-width: 768px) {
-                        & {
-                            color: rgb(144, 126, 130);
-                            font-family: 'DM Sans';
-                            font-size: 12px;
-                            font-weight: 500;
-                            width: 220px;
-                        }
-                    }
-                }
-                &__button {
-                    display: flex;
-                    align-items: center;
-                    gap: 15px;
-                    color: rgb(212, 20, 67);
-                    font-family: 'DM Sans';
-                    font-size: 16px;
-                    font-weight: 700;
-                    line-height: 21px;
-                    border-radius: 22px;
-                    border: none;
-                    background-color: rgb(255, 255, 255);
-                    padding: 15px 45px;
-                    @media (max-width: 1200px) {
-                        & {
-                            color: rgb(212, 20, 67);
-                            font-family: 'DM Sans';
-                            font-size: 16px;
-                            font-weight: 700;
-                            padding: 15px 40px;
-                        }
-                    }
-                }
-            }
+          }
         }
-        .milks-cards {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 30px;
-            padding-top: 40px;
-            @media (max-width: 1200px) {
-                & {
-                    padding-top: 65px;
-                    gap: 60px;
-                }
+        &__button {
+          display: flex;
+          align-items: center;
+          gap: 15px;
+          color: rgb(212, 20, 67);
+          font-family: 'DM Sans';
+          font-size: 16px;
+          font-weight: 700;
+          line-height: 21px;
+          border-radius: 22px;
+          border: none;
+          background-color: rgb(255, 255, 255);
+          padding: 15px 45px;
+          @media (max-width: 1200px) {
+            & {
+              color: rgb(212, 20, 67);
+              font-family: 'DM Sans';
+              font-size: 16px;
+              font-weight: 700;
+              padding: 15px 40px;
             }
-            @media (max-width: 768px) {
-                & {
-                    flex-wrap: wrap;
-                    padding-top: 40px;
-                    align-items: flex-start;
-                    justify-content: flex-start;
-                }
-            }
-            .milk-card {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 15px;
-                &__img {
-                    padding-bottom: 25px;
-                    @media (max-width: 768px) {
-                        & {
-                            padding-bottom: 0px;
-                        }
-                    }
-                    .milk-card--picture {
-                        @media (max-width: 768px) {
-                            & {
-                                width: 33px;
-                                height: 50px;
-                            }
-                        }
-                    }
-                }
-                &__title {
-                    color: rgb(212, 20, 67);
-                    font-family: 'Titan One';
-                    font-size: 58px;
-                    font-weight: 400;
-                    line-height: 66px;
-                    text-transform: uppercase;
-                    @media (max-width: 1200px) {
-                        & {
-                            color: rgb(212, 20, 67);
-                            font-family: 'Titan One';
-                            font-size: 48px;
-                            font-weight: 400;
-                            line-height: 55px;
-                            text-transform: uppercase;
-                        }
-                    }
-                    @media (max-width: 768px) {
-                        & {
-                            color: rgb(212, 20, 67);
-                            font-family: 'Titan One';
-                            font-size: 36px;
-                            font-weight: 400;
-                            text-transform: uppercase;
-                        }
-                    }
-                    &:nth-child(2) {
-                        text-transform: none;
-                    }
-                }
-                &__item {
-                    color: rgb(0, 0, 0);
-                    font-family: 'DM Sans';
-                    font-size: 16px;
-                    font-weight: 700;
-                    line-height: 176%;
-                    width: 330px;
-                    @media (max-width: 1200px) {
-                        & {
-                            color: rgb(0, 0, 0);
-                            font-family: 'DM Sans';
-                            font-size: 14px;
-                            font-weight: 700;
-                            width: 180px;
-                        }
-                    }
-                    @media (max-width: 768px) {
-                        & {
-                            color: rgb(0, 0, 0);
-                            font-family: 'DM Sans';
-                            font-size: 12px;
-                            font-weight: 700;
-                            width: 230px;
-                        }
-                    }
-                }
-            }
+          }
         }
+      }
     }
+    .milks-cards {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      padding-top: 40px;
+      @media (max-width: 1200px) {
+        & {
+          padding-top: 65px;
+          gap: 60px;
+        }
+      }
+      @media (max-width: 768px) {
+        & {
+          flex-wrap: wrap;
+          padding-top: 40px;
+          align-items: flex-start;
+          justify-content: flex-start;
+        }
+      }
+      .milk-card {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+        &__img {
+          padding-bottom: 25px;
+          @media (max-width: 768px) {
+            & {
+              padding-bottom: 0px;
+            }
+          }
+          .milk-card--picture {
+            @media (max-width: 768px) {
+              & {
+                width: 33px;
+                height: 50px;
+              }
+            }
+          }
+        }
+        &__title {
+          color: rgb(212, 20, 67);
+          font-family: 'Titan One';
+          font-size: 58px;
+          font-weight: 400;
+          line-height: 66px;
+          text-transform: uppercase;
+          @media (max-width: 1200px) {
+            & {
+              color: rgb(212, 20, 67);
+              font-family: 'Titan One';
+              font-size: 48px;
+              font-weight: 400;
+              line-height: 55px;
+              text-transform: uppercase;
+            }
+          }
+          @media (max-width: 768px) {
+            & {
+              color: rgb(212, 20, 67);
+              font-family: 'Titan One';
+              font-size: 36px;
+              font-weight: 400;
+              text-transform: uppercase;
+            }
+          }
+          &:nth-child(2) {
+            text-transform: none;
+          }
+        }
+        &__item {
+          color: rgb(0, 0, 0);
+          font-family: 'DM Sans';
+          font-size: 16px;
+          font-weight: 700;
+          line-height: 176%;
+          width: 330px;
+          @media (max-width: 1200px) {
+            & {
+              color: rgb(0, 0, 0);
+              font-family: 'DM Sans';
+              font-size: 14px;
+              font-weight: 700;
+              width: 180px;
+            }
+          }
+          @media (max-width: 768px) {
+            & {
+              color: rgb(0, 0, 0);
+              font-family: 'DM Sans';
+              font-size: 12px;
+              font-weight: 700;
+              width: 230px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
